Finished Friends page-vertical align issue in friend container

--- a/mystyle.css
+++ b/mystyle.css
@@ -70,4 +70,9 @@ body {
 .center-button {
   text-align: center; }
 
+.friend-container {
+  border: solid 1px black;
+  margin: 10px 10px 10px 10px;
+  padding: 10px 0px 10px 0px; }
+
 /*# sourceMappingURL=mystyle.css.map */
