--- a/mystyle.css.scss
+++ b/mystyle.css.scss
@@ -99,7 +99,22 @@ body {
   text-align: center;
 }
 
+.friend-container {
+  border: solid 1px black;
+  // display: table !important;
+  margin: 10px 10px 10px 10px;
+  padding: 10px 0px 10px 0px;
+}
 
+// .v-center {
+//   float: none;
+//   display: table-cell;
+//   vertical-align: middle;
+// }
+// .v-center {
+//   display: inline-block
+//   vertical-align: center;
+// }
 
 
 
